c/examples/writing-a-c-compiler-tests/tests/chapter_18/invalid_struct_tags/member_type_undeclared.c
struct s {
    // In our implementation, this member declaration fails tag resolution
    // because the 'struct s' type hasn't been declared.
    // In a fully conforming implementation it would fail because it's
    // illegal to declare structure members of incomplete type
    struct a b;
};